# ChangeLog for net-misc/dhcpcd-ui
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/dhcpcd-ui/ChangeLog,v 1.2 2010/06/12 21:36:17 darkside Exp $

*dhcpcd-ui-0.5.0 (12 Jun 2010)

  12 Jun 2010; Jeremy Olexa <darkside@gentoo.org> +dhcpcd-ui-0.5.0.ebuild,
  +metadata.xml:
  Initial ebuild for dhcpcd-ui by Roy Marples and myself. bug 321369
