@@ -1,4 +1,4 @@
-DIST dhcpcd-ui-0.5.0.tar.bz2 141925 RMD160 e26a17b6bd35bbb004115f6a88c004dc3022c4ec SHA1 ef04d1d2e4bc8e95c00702fff2dad123d1f693e6 SHA256 f91fdd660d02b25b594b56e3f0fe48969308b48d1d6fd5b7310aa76beb4eae2a
-EBUILD dhcpcd-ui-0.5.0.ebuild 630 RMD160 731d39122f2d966ace918d91f68831671c32d788 SHA1 72c690e64a72d2fdcce23c7cac8826e9ff7e0fce SHA256 f63091bd708c2c71f1ef754286e8966a02b0f14bd6439662a60d37f6bdbb6155
-MISC ChangeLog 405 RMD160 2172a625d86d8370bb7628b33e164b1fec1271df SHA1 e33d0aeb6795466226a968d1364d200e20851731 SHA256 79cfa0b96a5aadab7dadab885a075e1acd418ea637108e7535c771a9cee6769d
+DIST dhcpcd-ui-0.5.1.tar.bz2 142969 RMD160 104ef3c1a2efd72555ee743164de4be9becf04a4 SHA1 da78f549651e1d85a8f452fb41f872f95ae8d834 SHA256 1d9990deb0dac8e51b48267fe9eb17ae4869fda04ff5c4d9174fa8155fd757c4
+EBUILD dhcpcd-ui-0.5.1.ebuild 601 RMD160 45113de6468eccd89105a2aa6f854c53de9fd6ae SHA1 840a5e406f0bebfd722ee2f9ec25a48402904256 SHA256 4200935599ccff3361e7decbd876adb729a8e127e19f01b5ef7c98a567af6505
+MISC ChangeLog 609 RMD160 c5857391732c351633d0681777cb945af77ab242 SHA1 b7222343bcf13c2906bf8b4dba7dce25d4cf18d7 SHA256 b86837eb169b76ca14dd675de624dcaf798e05f5fb2fc0895d6ea6c5a17b9fe7
 MISC metadata.xml 224 RMD160 ef4cc3054936a3572ec992bcceee2519eddcba46 SHA1 3b0afde57f521aa4f834fed82806e79be3530c3e SHA256 fc3ff3b3ec6fac6a93feff4a2692f42f8abd9e7b5741d81a272a820d40092b73
