@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/dhcpcd-ui/dhcpcd-ui-0.5.0.ebuild,v 1.1 2010/06/12 21:35:25 darkside Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/dhcpcd-ui/dhcpcd-ui-0.5.1.ebuild,v 1.1 2010/12/12 02:27:39 darkside Exp $
 
 EAPI=3
 
@@ -11,14 +11,11 @@ SRC_URI="http://roy.marples.name/downloads/dhcpcd/${P}.tar.bz2"
 LICENSE="BSD-2"
 SLOT="0"
 KEYWORDS="~amd64"
-IUSE="gtk"
+IUSE=""
 
 DEPEND="net-libs/dhcpcd-dbus
-	gtk? ( >x11-libs/gtk+-2 )"
-
-src_configure() {
-	econf $(use_with gtk)
-}
+	>=x11-libs/libnotify-0.4.4
+	x11-libs/gtk+:2"
 
 src_install() {
 	emake DESTDIR="${D}" install || die
