@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/dhcpcd-ui
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/dhcpcd-ui/ChangeLog,v 1.2 2010/06/12 21:36:17 darkside Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/dhcpcd-ui/ChangeLog,v 1.3 2010/12/12 02:27:39 darkside Exp $
+
+*dhcpcd-ui-0.5.1 (12 Dec 2010)
+
+  12 Dec 2010; Jeremy Olexa <darkside@gentoo.org> -dhcpcd-ui-0.5.0.ebuild,
+  +dhcpcd-ui-0.5.1.ebuild:
+  Version bump with improvements for bug 343127 by Roman v. Gemmeren
 
 *dhcpcd-ui-0.5.0 (12 Jun 2010)
 
